ext-mysql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: db-sosialmedia.cgeajbxy0cgb.ap-southeast-1.rds.amazonaws.com
