wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
